header-nav-list

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,35 @@
+/* GENERAL */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* REUSABLE */
+
+/* HEADER */
+
+.nav-section {
+  background-color: aqua;
+  padding: 20px 100px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  /* DEBUG */
+  background-color: orange;
+  padding: 10px 15px;
+}
+
+#header-nav-list {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  gap: 15px;
 }
