--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,32 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .hero-content {
-  width: 800px;
+  width: 65%;
+  height: 400px;
+  background-color: pink;
+}
+
+/* FEATURE SECTION */
+
+.feature-block {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature-img {
+  width: 40%;
+  height: 400px;
+  background-color: rgb(47, 188, 253);
+}
+
+.feature-content {
+  width: 30%;
   height: 400px;
   background-color: pink;
 }
