--- a/css/style.css
+++ b/css/style.css
@@ -58,31 +58,31 @@ nav {
 /* FEATURE SECTION */
 
 .feature-block {
-  padding: 30px;
+  padding: 30px 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .feature-img {
-  width: 40%;
+  width: 55%;
   height: 400px;
   background-color: rgb(47, 188, 253);
 }
 
 .feature-content {
-  width: 30%;
+  width: 45%;
   height: 400px;
   background-color: pink;
 }
 
-.feature-block:nth-child(even) {
+.feature-section:nth-child(even) {
   background-color: rgb(243, 243, 243);
 }
 
 .last-feature-content {
   height: 800px;
-  width: 70%;
+  width: 100%;
   background-color: green;
 }
 
@@ -90,21 +90,23 @@ nav {
 
 footer {
   background-color: #23272a;
-  min-height: 600px;
+  min-height: 500px;
 }
 
+/* FIRST SECTION FOOTER */
 .first-footer-section {
   padding: 20px 0;
   border-bottom: 1px solid #fff;
+  margin-bottom: 20px;
 
   display: flex;
   gap: 2px;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .col-social {
-  width: calc(100% / 4);
+  width: 33.33%;
   height: 400px;
 
   background-color: rgb(228, 58, 11);
@@ -112,6 +114,24 @@ footer {
 
 .col-footer {
   height: 400px;
-  width: calc(100% / 6);
+  width: 16.67%;
   background-color: green;
+}
+
+/* SECOND SECTION FOOTER */
+.second-footer-section {
+  background-color: aquamarine;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-logo {
+  background-color: rgb(251, 147, 147);
+}
+
+.footer-btn {
+  background-color: rgb(251, 147, 147);
+  border: none;
+  cursor: pointer;
 }
